--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -207,7 +207,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="./Annoying Orange Clicker.html"
+export_path="export/HTML5/Annoying Orange Clicker.html"
 script_export_mode=1
 script_encryption_key=""
 
@@ -232,7 +232,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="export/Annoying Orange Clicker.exe"
+export_path="export/Orange that is Annoying Clicker v1.0.2.exe"
 script_export_mode=1
 script_encryption_key=""
 
@@ -273,7 +273,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="export/Annoying Orange Clicker.x86_64"
+export_path="export/Annoying Orange Clicker v1.0.2.x86_64"
 script_export_mode=1
 script_encryption_key=""
 
@@ -298,7 +298,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="export/Annoying Orange Clicker.dmg"
+export_path="export/Annoying Orange Clicker v1.0.2.dmg"
 script_export_mode=1
 script_encryption_key=""
 
